contact-abc/css/styles.css
:root {
    --accent-colour: #EA580C;
    --form-field-outilne: #C1C4C8;
    --accent-hover: #CB4E0B;
}

/* Utility */

body {
    background-color: #F2F6FA;
    font-family: "Noto Sans Bengali", sans-serif;
}

.container {
    padding: 3rem 1rem;
}

/* Typography */

h2 {
    font-size: 1.75rem;
    line-height: 1.5;
    font-weight: 700;
    border-left: .3125rem solid var(--accent-hover);
    border-bottom: .1875rem solid var(--accent-hover);
    width: fit-content;
    padding-left: .25rem;
    margin-bottom: 1.5rem;
}

header p {
    font-size: 1rem;
    font-weight: 500;
    line-height: 1.5;
    margin-bottom: 2rem;
}

/* Form Styling */

form {
    background-color: #ffffff;
    padding: 2rem 1rem;
    width: 100%;
}

form input:not(input[type="submit"], input[type="radio"]) {
    border: 1px solid var(--form-field-outilne);
    border-radius: .5rem;
    width: 100%;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 400;
    padding: 1rem 1rem;
    margin-bottom: 2rem;
}

form fieldset {
    border: none;
    padding: 0;
}

form fieldset div label {
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: 1rem;
    margin-bottom: 1.5rem;
    padding: 1rem 1rem;
    border: 1px solid var(--form-field-outilne);
    border-radius: .5rem;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 400;
    cursor: pointer;
}

form fieldset div label span {
    width: fit-content;
}

form input[type="radio"] {
    width: 0.875rem;
    height: 0.875rem;
    accent-color: var(--accent-hover);
}

form textarea {
    border: 1px solid var(--form-field-outilne);
    border-radius: .5rem;
    width: 100%;
    min-height: 12.5rem;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: 400;
    padding: 1rem 1rem;
    resize: vertical;
    margin-bottom: 2rem;
}

form label:not(fieldset div label),
form fieldset legend {
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    margin-bottom: 0.5rem;
}

input[type="submit"] {
    background-color: var(--accent-colour);
    border-radius: .5rem;
    border: 1px solid var(--accent-colour);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1;
    color: #F5F5F5;
    padding: 1.125rem;
    width: 100%;
    cursor: pointer;
}

/* Deconstructed Pancake */

fieldset div {
    display: flex;
    flex-wrap: wrap;
    column-gap: 1rem;
    justify-content: center;
}

fieldset div label {
    flex: 1 1 14.5rem;
}

/* Hover States and Interactions */

input[type="submit"]:hover,
input[type="submit"]:focus,
input[type="submit"]:active {
    background-color: var(--accent-hover);
}

fieldset label:has(input[type="radio"]:checked) {
    background-color: var(--accent-hover);
    color: #ffffff;
}

/* Header Container Query */

header {
    container-type: inline-size;
    container-name: header-container;
}

@container header-container (min-width: 43.75rem) {
    .inner-header-container {
        display: flex;
        column-gap: 1rem;
    }

    .inner-header-container div,
    .inner-header-container img {
        width: calc((100% / 2) - (1rem / 2));
    }
}

/* Media Queries */

@media screen and (min-width: 75rem) {
    .container {
        display: flex;
        column-gap: 2.5rem;
    }

    .container header {
        max-width: 31.25rem;
        container-type: unset;
    }
}

@media screen and (min-width: 103.75rem) {
    .container {

        /* The container width is different in Figma (1446px) and in the assignment description (1560px). 
        I picked the width in the assignment description. */
        max-width: 97.5rem;
        margin: 0 auto;
    }
}

